--- a/index.html
+++ b/index.html
@@ -35,19 +35,36 @@
                     <img src="Images/Img1.png" alt="img1" />
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <div class="dropdown1">
-                        <button class="dropbtn"><img src="Images/download.png" /> &#x2002;INR&#x2002;
-                            <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
+                    <div class="right-menuber">
+                        <div class="dropdown1">
+                            <button class="dropbtn"><img src="Images/download.png" /> &#x2002;INR&#x2002;
+                                <i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </button>
+                            <div class="dropdown-content">
+                                <a href="#">Link 1</a>
+                                <a href="#">Link 2</a>
+                                <a href="#">Link 3</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <h1 class="blue bold">Personalized gift boxes with attitude.</h1>
+                    <p class="blue center">Send someone a pre-wrapped box full of goodies from the brands you know and
+                        love.
+                    </p>
+                    <div class="btn-div">
+                        <button class="btn choose-box-btn">CHOOSE YOUR BOX</button>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <img src="Images/Img2.jpg" alt="Img2" />
+                </div>
+            </div>
         </div>
+    </div>
 </body>
 
 </html>
