4-5 pages added in website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -29,40 +31,176 @@
                             <a href="#">Link 3</a>
                         </div>
                     </div>
-                    <p class="menu-p">Build A Box</p>
+                    <div class="right-menuber">
+                        <p class="menu-p">Build A Box</p>
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <img src="Images/Img1.png" alt="img1" />
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <div class="right-menuber">
-                        <div class="dropdown1">
-                            <button class="dropbtn"><img src="Images/download.png" /> &#x2002;INR&#x2002;
-                                <i class="fa fa-caret-down" aria-hidden="true"></i>
-                            </button>
-                            <div class="dropdown-content">
-                                <a href="#">Link 1</a>
-                                <a href="#">Link 2</a>
-                                <a href="#">Link 3</a>
-                            </div>
+                    <div class="dropdown1">
+                        <button class="dropbtn"><img src="Images/download.png" /> &#x2002;INR&#x2002;
+                            <i class="fa fa-caret-down" aria-hidden="true"></i>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
                         </div>
+                    </div>
+                    <div class="right-menuber">
+                        <p class="menu-p">What?</p>
+                        <p class="menu-p">Shipping</p>
+                        <p class="menu-p"><i class="fa fa-user-o" aria-hidden="true"></i></p>
+                        <p class="menu-p"><i class="fa fa-shopping-cart" aria-hidden="true"></i></p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <h1 class="blue bold">Personalized gift boxes with attitude.</h1>
-                    <p class="blue center">Send someone a pre-wrapped box full of goodies from the brands you know and
+                    <p class="blue center">Send someone a pre-wrapped box full of goodies from the brands you know
+                        and
                         love.
                     </p>
                     <div class="btn-div">
                         <button class="btn choose-box-btn">CHOOSE YOUR BOX</button>
+                    </div>
+                    <div class="fingure-image-div">
+                        <img src="Images/finger-point.gif" alt="finger-point" />
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <img src="Images/Img2.jpg" alt="Img2" />
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="second-div">
+        <h4>Here's <span class="dotted-div">LSEP</span>how it works</h4>
+        <div class="container">
+            <div class="row center">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mrg-top">
+                    <img src="Images/Img3.png" alt="Img3" />
+                    <h5>Pick out your box</h5>
+                    <p>Order for yourself or send the gift to your family or friends.</p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <img src="Images/Img4.png" alt="Img3" />
+                    <h5>Lovingly made</h5>
+                    <p>After your order, we get to work to create your box from scratch.</p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mrg-top">
+                    <img src="Images/Img5.png" alt="Img3" />
+                    <h5>Packed and shipped out</h5>
+                    <p>Within 1-3 days of ordering, your box is sent on its way!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="third-div">
+        <h4>Shop Instagram favorites</h4>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-8 col-xs-8 image-space">
+                    <img src="Images/Img6.jpg" alt="Img6" />
+                    <h5>The 'Late night at 2am' box</h5>
+                    <p>For the guy that has <span class="strike">everything</span>... some stuff going for them. Nothing
+                        better
+                        than crackin' this
+                        box open after a late night of Netflix and chill.</p>
+                    <button class="btn choose-box-btn">CHECK IT OUT</button>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-8 col-xs-8">
+                    <img src="Images/Img8.gif" alt="" class="Img8-Gif" />
+                    <img src="Images/Img7.jpg" alt="Img7" class="Img7-jpg" />
+                    <h5>The 'Treat Yo' Self' box</h5>
+                    <p>It's time to unwind. Treat your loved-ones, or just treat yo' self to a relaxing night in with
+                        the Treat Yo' Self box.</p>
+                    <div class="checkout-div">
+                        <button class="btn choose-box-btn">CHECK IT OUT</button>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="fourth-div">
+        <h5>Our treats have been featured on</h5>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2 col-md-2">
+                    <img src="Images/Img9.jpg" alt="Img9" />
+                </div>
+                <div class="col-lg-2 col-md-2">
+                    <img src="Images/Img10.jpg" alt="Img10" />
+                </div>
+                <div class="col-lg-2 col-md-2">
+                    <img src="Images/Img11.jpg" alt="Img11" />
+                </div>
+                <div class="col-lg-2 col-md-2">
+                    <img src="Images/Img12.jpg" alt="Img12" />
+                </div>
+                <div class="col-lg-2 col-md-2">
+                    <img src="Images/Img13.jpg" alt="Img13" />
+                </div>
+                <div class="col-lg-2 col-md-2">
+                    <img src="Images/Img14.jpg" alt="Img14" />
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="fifth-div">
+        <h5>What our customers are saying</h5>
+
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="Images/Img15.png" alt="Img15.png" />
+                    <p class="fifth-p">Finally, a gift box that isn't the same old boring products you see everything. I
+                        love everything about them!
+                    </p>
+                    <p class="fifth-p1">- Emily Corbett</p>
+                </div>
+
+                <div class="item">
+                    <img src="Images/Img15.png" alt="Img15.png" />
+                    <p class="fifth-p">Finally, a gift box that isn't the same old boring products you see everything. I
+                        love everything about them!
+                    </p>
+                    <p class="fifth-p1">- Emily Corbett</p>
+                </div>
+
+                <div class="item">
+                    <img src="Images/Img15.png" alt="Img15.png" />
+                    <p class="fifth-p">Finally, a gift box that isn't the same old boring products you see everything. I
+                        love everything about them!
+                    </p>
+                    <p class="fifth-p1">- Emily Corbett</p>
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 </body>
