--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
-            <ol class="carousel-indicators">
+            <ol class="carousel-indicators slider-indicator">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
@@ -168,40 +168,48 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="Images/Img15.png" alt="Img15.png" />
+                    <div class="slider-img">
+                        <img src="Images/Img15.png" alt="Img15.png" />
+                    </div>
                     <p class="fifth-p">Finally, a gift box that isn't the same old boring products you see everything. I
                         love everything about them!
                     </p>
-                    <p class="fifth-p1">- Emily Corbett</p>
+                    <p class="fifth-p1">&#x2013; Emily Corbett</p>
                 </div>
 
                 <div class="item">
-                    <img src="Images/Img15.png" alt="Img15.png" />
+                    <div class="slider-img">
+                        <img src="Images/Img15.png" alt="Img15.png" />
+                    </div>
                     <p class="fifth-p">Finally, a gift box that isn't the same old boring products you see everything. I
                         love everything about them!
                     </p>
-                    <p class="fifth-p1">- Emily Corbett</p>
+                    <p class="fifth-p1">&#x2013; Emily Corbett</p>
                 </div>
 
                 <div class="item">
-                    <img src="Images/Img15.png" alt="Img15.png" />
+                    <div class="slider-img">
+                        <img src="Images/Img15.png" alt="Img15.png" />
+                    </div>
                     <p class="fifth-p">Finally, a gift box that isn't the same old boring products you see everything. I
                         love everything about them!
                     </p>
-                    <p class="fifth-p1">- Emily Corbett</p>
+                    <p class="fifth-p1">&#x2013; Emily Corbett</p>
                 </div>
             </div>
 
             <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
+            <a class="left carousel-control slider-left" href="#myCarousel" data-slide="prev">
+                <span><i class="fa fa-long-arrow-left" aria-hidden="true"></i></span>
             </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
+            <a class="right carousel-control slider-right" href="#myCarousel" data-slide="next">
+                <span><i class="fa fa-long-arrow-right" aria-hidden="true"></i></span>
             </a>
         </div>
+    </div>
+
+    <div class="footer-div">
+
     </div>
 </body>
 
