Footer part added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
     </div>
     <div class="second-div">
-        <h4>Here's <span class="dotted-div">LSEP</span>how it works</h4>
+        <h4>Here's how it works</h4>
         <div class="container">
             <div class="row center">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 mrg-top">
@@ -209,7 +209,46 @@
     </div>
 
     <div class="footer-div">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-3">
+                    <ul class="simple">
+                        <li>Shop Boxes</li>
+                        <li>Build a Box</li>
+                        <li>Buy a Gift Card</li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                    <ul class="simple">
+                        <li>About Us</li>
+                        <li>Contact Us</li>
+                        <li>Shipping Policy</li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                    <p class="follow-p">Follow us</p>
+                    <p class="follow-p">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>&#x2002;
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </p>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                    <p class="follow-p">Sign up for special offers</p>
+                    <div class="input-div">
+                        <p class="input-p"><input type="text" placeholder="Your email" /></p>
+                        <p class="btn-p"><button class="btn choose-box-btn">SUBSCRIBE</button></p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12">
+                    <p class="copyright-p">&#x00A9; Copyright 2021, What The Box?. All Rights Reserved.</p>
+                </div>
+            </div>
+        </div>
+        <div class="Img-div">
+            <img src="Images/Img16.png" alt="Img16" />
+        </div>
     </div>
 </body>
 
