some css changes added

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
                         <button class="dropbtn">Shop Boxes
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </button>
-                        <div class="dropdown-content">
+                        <!-- <div class="dropdown-content">
                             <a href="#">Link 1</a>
                             <a href="#">Link 2</a>
                             <a href="#">Link 3</a>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="right-menuber">
                         <p class="menu-p">Build A Box</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 center">
                     <img src="Images/Img1.png" alt="img1" />
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
@@ -58,9 +58,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <h1 class="blue bold">Personalized gift boxes with attitude.</h1>
-                    <p class="blue center">Send someone a pre-wrapped box full of goodies from the brands you know
+                    <p class="h1-p">Send someone a pre-wrapped box full of goodies from the brands you know
                         and
                         love.
                     </p>
@@ -71,7 +71,7 @@
                         <img src="Images/finger-point.gif" alt="finger-point" />
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <img src="Images/Img2.jpg" alt="Img2" />
                 </div>
             </div>
